# MZPico-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  basic.h  board.h  bootstrap.sh  bus.h  bus.hpp  bus_io.pio  common.h  config.cpp  config.hpp  device.c  device.cpp  device.h  device.hpp  embedded_mzf.hpp  fatfs_disk.c  fatfs_disk.h  fdc.c  fdc.h  ffconf.h  file.c  file.c.bk  file.cpp  file.h  file.hpp  fw_gen.py  gen_mzf_array.py  gen_rd.h  gen_rd_content.py  hw_config.c  main.c  main.cpp  msc_disk.c  mz800pico_common.h  mz800pico_device.c  mz800pico_device.h  (+22 more)
.github/: tag_release.yml
.github/workflows/: build.yml  tag_release.yml
byte_source/: byte_source.hpp  cached_source.cpp  cached_source.hpp  file_source.cpp  mzf_sram_file_source.hpp  mzf_sram_ram_source.cpp  qd_dir_source.cpp  ram_source.cpp  ram_source.hpp
mz_devices/: fdc.c  fdc.cpp  fdc.h  fdc.hpp  pico_mgr.c  pico_mgr.cpp  pico_mgr.h  pico_mgr.hpp  pico_rd.c  pico_rd.cpp  pico_rd.h  pico_rd.hpp  qd.c  qd.cpp  qd.h  qd.hpp  sramdisk.c  sramdisk.cpp  sramdisk.h  sramdisk.hpp
src/: board.h  bus.hpp  bus_io.pio  cloud_fs.cpp  cloud_fs.hpp  common.hpp  config.hpp  device.cpp  device.hpp  embedded_mzf.hpp  fatfs_disk.c  fatfs_glue.c  file.cpp  file.hpp  flash_fs.c  flash_fs.h  format_flash.cpp  http_utils.c  http_utils.h  i2s_audio.cpp  i2s_audio.hpp  i2s_audio.pio  lwipopts.h  msc_disk.c  mz_devices.cpp  mz_devices.hpp  mzf_basic.hpp  rest_api.cpp  rest_api.hpp
src/byte_source/: CMakeLists.txt  file_source.hpp  mzf_sram_file_source.cpp  mzf_sram_ram_source.hpp  qd_dir_source.hpp
src/mz_devices/: ctc.cpp  ctc.hpp  fdc.cpp  pico_mgr.cpp  pico_rd.cpp  pico_rd.hpp  qd.cpp  qd.hpp  sn76489.cpp  sn76489.hpp  sramdisk.cpp
